Opened 5 years ago

Closed 5 years ago

#15960 closed bug (fixed)

[regression] scroll bar arrow button is not changed when pressed

Reported by: X512 Owned by: jscipione
Priority: normal Milestone: R1/beta2
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by X512)

This is hrev54121.

When pressing scroll bar arrow button it work but do not change to pressed form. Easily reproduced in AboutSystem credits.

Change History (5)

comment:1 by X512, 5 years ago

Description: modified (diff)

comment:2 by X512, 5 years ago

Regression is introduced in hrev54032.

comment:3 by diver, 5 years ago

Owner: changed from nobody to jscipione
Status: newassigned

comment:4 by diver, 5 years ago

Milestone: UnscheduledR1/beta2

comment:5 by waddlesplash, 5 years ago

Resolution: fixed
Status: assignedclosed

Fixed merged in hrev54133.

Note: See TracTickets for help on using tickets.